--- a/src/app/components/courselist/courselist.component.css
+++ b/src/app/components/courselist/courselist.component.css
@@ -43,7 +43,7 @@
     text-align: center;
 }
 
-.text {
+.text-title {
    font-family: verdana;
    font-size: 14px;
    text-align: center;
@@ -85,4 +85,103 @@
 .fa-caret-up {
    text-align: right;
    font-size: 30px;
+}
+
+
+.row
+  {
+    margin-left: 10%;
+    margin-top: 3%;
+  }
+  .column {
+    float: left;
+    width: 50%;
+    padding: 2px;
+  }
+  #bloodCards
+  {
+    margin-right: 5%;
+    margin-bottom: 5%;
+    border-radius: 15px;
+    padding: 0px;
+    width: 40%;
+    height: 60%;
+    transition: transform .2s;
+    box-shadow: 5px 5px 25px 8px rgb(147, 158, 147);
+  }
+/* 
+  /* #bloodCards:hover
+  {
+    transform: scale(1.05);
+    cursor: pointer;
+  } */ */
+#searchtxt
+{
+  width: 20%;
+  float: right;
+}
+.img-block{
+    width: 40%;
+    height: 200px;
+    border-radius: 15px;
+    background-color: white;
+}
+.circle{
+    background-color: rgb(22, 121, 72);
+    margin-left: auto;
+    margin-right: auto;
+    align-content: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    border-radius: 50%;
+    width: 50%;
+    height: 50%;
+}
+.bloodimg
+{
+    margin-left: 13%;
+    margin-top: 8%;
+}
+.heading-text
+{
+    font-weight: bolder;
+    font-size: 40px;
+    margin-top: 1%;
+    color: #440707;
+    font-family: 'Aladin', cursive;
+    letter-spacing: 1px;
+    text-align: center;
+}
+
+.bloodimg
+{
+  float: left;
+  margin-top: 3%;
+  margin-right: 3%;
+}
+.card-block
+{
+margin-top: 3%;
+margin-bottom: 3%;
+margin-left: 2%;
+}
+.text{
+font-family: verdana;
+font-size: 14px;
+margin-top: 3%;
+}
+
+.course-contents {
+   position: relative; /* Required for absolute positioning of the caret */
+   padding: 30px;
+   padding-left: 50px;
+   display: block; 
+   align-items: center; /* Vertically center content */
+   justify-content: space-between; /* Horizontally distribute content */
+   /* color: #6c1466; */
+   /* background-color: 
+   rgb(229, 213, 233); */
+   margin-top: 2%;
+   margin-bottom: 2%;
+   margin-left: 30%;
 }
