--- a/src/app/components/fullcourse/fullcourse.component.html
+++ b/src/app/components/fullcourse/fullcourse.component.html
@@ -21,8 +21,8 @@
         <p style="font-size: 16px;"><b> Enrolled Date : </b>{{course.enrolleddate}}</p>
         <p style="font-size: 16px;"> <b>Learners : </b>{{course.enrolledcount}} learners enrolled previously</p>
         </div>
-    <!-- <div class="row"> -->
-        <!-- <div class="col-md-8">
+    <div class="row">
+        <div class="col-md-8">
             
     <div class="chapter-list" *ngFor="let chapter of chapterlist">
         <div style="font-weight: bold; font-size: large; align-items: center; color: darkred;"><i class="fa fa-list"></i> Course Contents</div>
@@ -88,7 +88,7 @@
 
     </div>
 
-    </div>  -->
+    </div>
 </div>
 
 <div class="column">
