--- a/src/app/components/fullcourse/fullcourse.component.css
+++ b/src/app/components/fullcourse/fullcourse.component.css
@@ -200,3 +200,22 @@
     position: relative;
     height: 100%;
   }
+
+  .download-btn {
+    /* position: relative; */
+    border-radius: 15px;
+    padding: 30px;
+    padding-left: 50px;
+    max-width: 100px;
+    height: 50px;
+    transition: transform .2s;
+    box-shadow: 5px 5px 25px 8px rgb(147, 158, 147);
+    /* display: flex; */
+    align-items: center; /* Vertically center content */
+    justify-content: space-between; /* Horizontally distribute content */
+    color: white;
+    background-color: 
+    rgb(28, 139, 76);
+    margin-top: 2%;
+    margin-bottom: 2%;
+ }
