--- a/src/app/components/quizlist/quizlist.component.html
+++ b/src/app/components/quizlist/quizlist.component.html
@@ -1,23 +1,21 @@
-<div>
-    <div id="quizedetailscard" style="margin-left: 30%; margin-top: 5%;" *ngFor="let data of quizlist | async">
-        <div class="card-body"
-            style="box-shadow: 2px 2px 15px 8px rgb(147, 158, 147); margin-right: 5%; margin-bottom: 10%; padding-left: 3%; width: 520px; border-radius: 10px; background-color: white;">
-            <h4 class="card-title text-center" style="margin-bottom: 4%;"><b style="font-size: 30px;">{{data.quizname}}</b>
-            </h4>
-
-            <div><b style="color: darkred; font-size: large; margin-bottom: 1%;">No of questions: </b><b
-                    style="margin-left: 14%">{{data.noquestions}}</b></div>
-            <div><b style="color: darkred; font-size: large; margin-bottom: 1%;">Passing grade(%): </b><b
-                    style="margin-left: 6%">{{data.passingpercent}}</b></div>
-
-            <div style="margin-top: -7.5%; margin-left: 28%;">
-                <a (click)="editQuiz(data.quizid)" style="margin-right: 2%; border: none;" class="btn btn-primary">Edit
-                    Quiz</a>
-                <a (click)="attemptQuiz(data.quizid)" style="margin-right: 2%; border: none;" class="btn btn-primary">Attempt
-                    Quiz</a>
+<div style="margin-top: 10%;">
+    <div id="quizedetailscard" style="margin-top: 5%; text-align: center;" *ngFor="let data of quizlist | async">
+        <div class="container"
+            style="box-shadow: 2px 2px 15px 8px rgb(147, 158, 147); max-width: 520px; border-radius: 10px; background-color: white;
+            padding: 20px;">
+            <div class="text"><b class="element" style="font-family: cursive; font-size: 28px; color: #6c1466;">{{data.quizname}}</b>
+            </div>
+            <br>
+            <div class="text" style="text-align: left; font-family: 'aladin'; font-size: 18px;"><b class="element"> No of questions: </b> {{data.noquestions}}</div>
+            <div class="text" style="text-align: left; font-family: 'aladin'; font-size: 18px; "><b class="element">Passing grade(%): </b> {{data.passingpercent}}</div>
+            <div style="margin-top: 7.5%; margin-bottom: 3%;">
+                <a (click)="editQuiz(data.quizid)" style="border: none; background-color: rgb(121, 91, 108); margin-right: 2%;" class="btn btn-primary">Edit Quiz</a>
+                <a (click)="attemptQuiz(data.quizid)" style="border: none; background-color: rgb(58, 11, 11); " class="btn btn-primary">Attempt Quiz</a>
             </div>
         </div>
     </div>
-    <a (click)="addQuiz()" style="margin-right: 2%; border: none;" class="btn btn-primary">Add
-        Quiz</a>
+
+    <div class="container" style="text-align: center; margin-top: 5%; margin-bottom: 5%;">
+    <button (click)="addQuiz()" style="margin-right: 2%; border: none; width: 300px;" class="btnRegister"><i class="fa fa-plus"></i> Add Quiz</button>
+    </div>
 </div>
